fix: Css tweak to hide overflow

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@
   font-family: var(--main-font)
 }
 
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 .App {
   text-align: center;
 }
